--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "icon-font-generator": "^2.1.8",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.4",
     "sass-loader": "^7.0.1",
