--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "icon-font-generator": "^2.1.8",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.4",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
