--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^8.4.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.11",
+    "babel-loader": "^8.0.0",
+    "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "icon-font-generator": "^2.1.8",
@@ -27,6 +27,6 @@
   "scripts": {
     "dev": "webpack",
     "watch": "webpack --watch --progress",
-    "build": "webpack --config ./webpack.prod.config.js"
+    "build": "webpack --env.NODE_ENV='production'"
   }
 }
