--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "icon-font-generator": "^2.1.8",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.4",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
@@ -22,6 +22,7 @@
     "vue": "^2.5.17",
     "vue-cli": "^2.9.6",
     "vue-loader": "^15.3.0",
+    "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.1",
