--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "icon-font-generator": "^2.1.8",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.4",
     "pug": "^2.0.4",
