--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "webpack-cli": "^3.1.1",
     "webpack-notifier": "^1.6.0"
   },
+  "dependencies": {
+    "jquery": "^3.5.1"
+  },
   "scripts": {
     "dev": "webpack",
     "watch": "webpack --watch --progress",
