--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - .:/var/www/html
 
   db:
+    platform: linux/x86_64
     image: mysql:5.7
     # env_file: .env
     environment:
