--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "file-loader": "^1.1.11",
     "icon-font-generator": "^2.1.11",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "postcss-loader": "^2.1.4",
     "pug": "^3.0.1",
     "pug-plain-loader": "^1.1.0",
+    "sass": "^1.58.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
@@ -25,6 +25,7 @@
     "vue-loader": "^15.9.7",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
+    "vuex": "^4.1.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-notifier": "^1.13.0"
